--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
+    "url-loader": "^1.0.1",
     "vue-loader": "^13.6.2",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
