--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.8",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^3.0.1",
+    "less-loader": "^4.0.6",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^1.0.1",
